fix twemoji messing with line spacing

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -79,7 +79,7 @@ h1 {
 img.emoji {
 	height: 1.2em;
 	width: 1.2em;
-	margin: 0 .05em 0 .1em;
+	margin: 0 .05em 0 .1em !important;
 	vertical-align: -0.1em;
 
 	@apply inline-flex;
